# rmsx

./: .gitignore  .pyproject.toml.swp  1UBQ.psf  README.md  RMSX_FlipBook_Quickstart.ipynb  START_HERE_RMSX_and_Flipbook_Tutorial.ipynb  commands.cxc  dev_smoke.py  pyproject.toml  rmsx_dna_test.cxs  setup.py
.ipynb_checkpoints/: START_HERE_RMSX_and_Flipbook_Tutorial-checkpoint.ipynb
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
RMSX_Time_series_RMSF.egg-info/: PKG-INFO  SOURCES.txt
rmsx/: .gitignore  LICENSE  README.md  __init__.py  __main__.py  cli.py  core.py  flipbook.py  rmsx.py  setup.py
rmsx/r_scripts/: get_md_time_data.py  plot_rmsx.R  triple_plot_rmsx.R
rmsx/rmsx/: __init__.py  rmsx.py
rmsx/rmsx/r_scripts/: install_deps.R
rmsx/rmsx_timeseries_rmsf.egg-info/: PKG-INFO  SOURCES.txt
rmsx/test_files/1UBQ_rmsx/chain_7_rmsx/: rmsf.csv  slice_11.dcd  slice_12.dcd  slice_13.dcd  slice_2.dcd  slice_20.dcd  slice_23.dcd  slice_34.dcd  slice_40.dcd  slice_45.dcd  slice_5.dcd  slice_51.dcd  slice_52.dcd  slice_57.dcd  slice_61.dcd  (+2 more)
rmsx_and_flipbook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rmsx_timeseries_rmsf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: rmsx_cli.py
src/rmsx/: __init__.py  flipbook.py
src/rmsx/r_scripts/: plot_rmsx.R
test_files/1UBQ_rmsx/chain_7_rmsx/: rmsd.csv  rmsx_mon_sys_0.015_ns.csv  slice_1.dcd  slice_10.dcd  slice_14.dcd  slice_15.dcd  slice_16.dcd  slice_17.dcd  slice_18.dcd  slice_19.dcd  slice_21.dcd  slice_22.dcd  slice_24.dcd  slice_25.dcd  slice_26.dcd  slice_27.dcd  slice_28.dcd  slice_29.dcd  slice_3.dcd  slice_30.dcd  slice_31.dcd  slice_32.dcd  slice_33.dcd  slice_35.dcd  slice_36.dcd  slice_37.dcd  slice_38.dcd  slice_39.dcd  slice_4.dcd  slice_41.dcd  slice_42.dcd  slice_43.dcd  slice_44.dcd  slice_46.dcd  slice_47.dcd  slice_48.dcd  slice_49.dcd  slice_50.dcd  slice_53.dcd  slice_54.dcd  (+9 more)
test_files/multi_protease/chain_B_shiftmap/: rmsx_short_protease_backbone_4.995_ns.csv
(+6 files in other folders)
